--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-skeleton",
-  "version": "0.0.0",
+  "version": "0.0.0-1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +13,9 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0"
+  },
+  "subdomain": "digital-Socket.io",
+  "engines": {
+    "node": "0.10.x"
   }
 }
