--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-skeleton",
-  "version": "0.0.0-3",
+  "version": "0.0.0-10",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,7 +12,8 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "jade": "~1.6.0",
+    "socket.io": "~1.2.1"
   },
   "subdomain": "digital-Socket.io",
   "engines": {
